--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,7 +5,7 @@ env:
 # Controls when the action will run
 on:
   push:
-    branches: [ solution ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
       uses: SteveSandersonMS/ghaction-rewrite-base-href@v1
       with:
         html_path: ${{ env.PUBLISH_DIR }}/index.html
-        base_href: /csharp-ch-6-exercise-1/
+        base_href: /BlackJackBlazor/
         
     # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
     - name: Add .nojekyll file
